Bug 473541 - On Wayland, Windows cannot be activated with touch in Overview Effect & Present Windows effects
Summary: On Wayland, Windows cannot be activated with touch in Overview Effect & Prese...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6, wayland-only
Depends on:
Blocks:
 
Reported: 2023-08-19 19:37 UTC by djmenig
Modified: 2023-09-13 13:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description djmenig 2023-08-19 19:37:39 UTC
SUMMARY
There is no touch input within the Overview Effect and Present Windows.


STEPS TO REPRODUCE
1. Open Overview Effect or Present Windows.
2. Attempt to use touchscreen.

OBSERVED RESULT
Touchscreen does not function.

EXPECTED RESULT
There should be a response when using the touchscreen (e.g., touching an open window should bring it into focus).

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Kernel Version: 6.2.0-26-generic (64-bit)
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-08-22 13:04:38 UTC
Can reproduce. Well, mostly. Touches are clearly being registered, but taps on windows aren't activating them. They highlight and then nothing happens.
Comment 2 Nate Graham 2023-08-22 16:19:23 UTC
Works for me on X11, interestingly enough.
Comment 3 djmenig 2023-08-22 19:46:12 UTC
(In reply to Nate Graham from comment #2)
> Works for me on X11, interestingly enough.

Yup, works for me on X11 as well.
Comment 4 Bug Janitor Service 2023-09-13 13:05:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4411
Comment 5 Zamundaaa 2023-09-13 13:26:00 UTC
Git commit 3a95c202794934a98b749ee249d686359ae38ca1 by Xaver Hugl, on behalf of Marco Martin.
Committed on 13/09/2023 at 15:25.
Pushed by zamundaaa into branch 'master'.

Fix touch on PointerHandlers

The events we forward to the offscreen QML view are with our own
QPointingDevice instance, which has a devicetype of touch but a null pointerType.

In Qt5 this was enough, but pointerhandlers in qt6 refuse events with an undefined
pointertype, so we have to explicitly set it to finger

M  +1    -1    src/libkwineffects/kwinoffscreenquickview.cpp

https://invent.kde.org/plasma/kwin/-/commit/3a95c202794934a98b749ee249d686359ae38ca1